Fix bug with typeview sprites tab and allow for sections to be collapsable

--- a/pokeapi_react_app/src/App.css
+++ b/pokeapi_react_app/src/App.css
@@ -1348,9 +1348,7 @@ const colours = {
 
 .spritestab-img {
   height: 2rem;
-  width: 8rem;
   margin: 0 7px 0 0;
-  object-fit: contain;
 }
 
 /* Not found page layout */
@@ -1903,8 +1901,8 @@ const colours = {
 }
 
 .sprites-table-img {
-  height: 6rem;
   width: 6rem;
+  flex-grow: 1;
   margin: 0 7px 0 0;
   object-fit: contain;
 }
